--- a/style.css
+++ b/style.css
@@ -14,3 +14,82 @@ body {
 	height: 100vh;
 	font-family: "Open Sans", sans-serif;
 }
+
+.container {
+	background-color: white;
+	padding: 40px;
+	text-align: center;
+}
+
+header h1 {
+	color: #333458;
+	font-size: 1.6rem;
+	margin-bottom: 10px;
+}
+
+.full-rating {
+	padding: 10px 20px;
+	background-color: #f5f8ff;
+	border-radius: 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.icon-star {
+	color: #fccc4d;
+	font-size: 1.5rem;
+}
+
+.full-rating p {
+	margin-left: 1rem;
+	font-size: 0.9rem;
+	color: #333458;
+}
+
+header p {
+	margin: 5px 0;
+	font-size: 0.7rem;
+	color: #333458;
+}
+
+main {
+	margin-top: 30px;
+}
+
+.rating {
+	display: grid;
+	grid-template-columns: 1fr 3fr 1fr;
+	margin: 10px 0;
+	align-items: center;
+}
+
+.rating .r-s {
+	color: #6a8ce4;
+}
+
+.rating .r-p {
+	color: #333458;
+}
+
+.meter {
+	height: 15px;
+	background-color: #f5f8ff;
+	border-radius: 50px;
+	width: 100%;
+}
+
+.meter > span {
+	height: 100%;
+	background-color: #fccc4d;
+	display: block;
+	border-radius: 50px;
+	position: relative;
+	overflow: hidden;
+}
+
+.link {
+	color: #6a8ce4;
+	margin-top: 15px;
+	cursor: pointer;
+}
